2002-01-31  Per Bothner  <per@bothner.com>

	* HTTP.scm (response-header, response-content-type, request-path-info,
	request-path-translated, request-query-string):  New procedures.

	* Makefile.am (EXTRA_DIST):  Add scm files.

2002-01-29  Per Bothner  <per@bothner.com>

	* CGIServletWrapper.java:  New class, to wrap servlets as CGI scripts.
	* HTTP.scm:  New helper functions, to access http parameters.
	* Makefile.am:  Update accordingly.  Thsi incldues adding rules
	for compiling the new HTTP.scm module.

2002-01-19  Per Bothner  <per@bothner.com>

	* KawaServlet.java (doGet):  Use CallContext.setInstance.

2002-01-13  Per Bothner  <per@bothner.com>

	* ServletPrinter.java:  New class, extends HttpPrinter.
	* Makefile.am (java_sources):  Added ServletPrinter.java.
	* KawaServlet.java (doGet):  Use new ServletPrinter.
	Let latter do setContentType, so odn't do it here.
	Likewise. don't emit <html> and </html>.
	On the other hand, do emit beginDocument and endDocument.

2001-11-24  Per Bothner  <per@bothner.com>

	* GetRequest.java:  Now implements Inlineable.

	* KawaServlet.java (apply):  No longer final.  Needs to be overridden
	if servlet contains a function definition.  Make body empty - not used.

2001-11-18  Per Bothner  <per@bothner.com>

	* ServletCallContext.java:  New file, old class moved
	from KawaServlet.java into its own file.

	* GetRequest.java:  New class, extends CpsProcedure.
	* GetResponse.java:  New class, extends CpsProcedure.
	* Makefile.am (java_sources):  Update accordingly.

2001-10-11  Per Bothner  <per@bothner.com>

	New package.
	* KawaServlet.java:  New class.
	* Makefile.am:  New.