@@ -1,3 +1,10 @@
+2002-02-05  Per Bothner  <per@bothner.com>
+
+	* CGIServletWrapper.java:  Also implement ServletConfig.
+	(getInitParameter, getInitParameterNames, getServletContext,
+	getServletName):  New methods, needed to implement ServletConfig.
+	(main):  Call init on servlet, passing in the CGIServletWrapper.
+
 2002-01-31  Per Bothner  <per@bothner.com>
 
 	* HTTP.scm (response-header, response-content-type, request-path-info,
